2004-10-01  Francis Labonte  <francis_labonte@hotmail.com>

	Reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_fmt):
	  Fix memleak.

2004-10-01  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	Reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* sys/sunaudio/gstsunaudio.c: (gst_sunaudiosink_setparams):
	  Solve #152805.
	* sys/sunaudio/gstsunmixer.c: (gst_sunaudiomixer_set_mute):
	  Solve 152806.

2004-10-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/riff/riff-media.c:
	(gst_riff_create_video_caps_with_data),
	(gst_riff_create_audio_caps_with_data):
	  Add codec_data handling (like asfdemux used to do).
	* gst/asfdemux/gstasf.c: (plugin_init):
	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_base_init),
	(gst_asf_demux_add_audio_stream), (gst_asf_demux_add_video_stream):
	  Use riff-media for caps creation instead of our own (mostly
	  broken) copy of its functions.

2004-10-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_try_capture):
	  Don't actually error out if we get another return value than
	  -EINVAL. Opposite to what I first thought, drivers have random
	  return values for this, although -EINVAL is the expected return
	  value. Since this is not fatal, we shouldn't use
	  GST_ELEMENT_ERROR() but just GST_ERROR_OBJECT().

2004-10-01  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/dvdread/dvdreadsrc.c: (dvdreadsrc_class_init),
	(dvdreadsrc_init), (dvdreadsrc_dispose), (dvdreadsrc_set_property),
	(dvdreadsrc_get_property), (_open), (_seek), (_read),
	(dvdreadsrc_get), (dvdreadsrc_open_file),
	(dvdreadsrc_change_state):
	  Fix. Don't do one big huge loop around the whole DVD, that will
	  cache all data and thus eat sizeof(dvd) (several GB) before we
	  see something.
	* gst-libs/gst/riff/riff-read.c: (gst_riff_read_seek):
	  Actually NULL'ify event after using it.